[Windows, WinCairo] Handle indeterminate checkbox state https://bugs.webkit.org/show_bug.cgi?id=79288

Patch by Lynn Neir <lynn.neir@skype.net> on 2012-02-24
Reviewed by Adam Roben.

Tested by fast/forms/indeterminate.html

* rendering/RenderThemeWin.cpp: Add code to check for indeterminate
  state in CheckBox.

Canonical link: https://commits.webkit.org/96567@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@108791 268f45cc-cd09-0410-ab3c-d52691b4dbfc